add language controller

--- a/package.json
+++ b/package.json
@@ -3,11 +3,17 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@types/i18next": "^11.9.0",
+        "@types/i18next-xhr-backend": "^1.4.1",
+        "@types/react-i18next": "^7.8.2",
         "@types/react-redux": "^6.0.9",
         "@types/react-router-dom": "^4.3.1",
         "@types/styled-components": "^3.0.1",
+        "i18next": "^11.9.0",
+        "i18next-xhr-backend": "^1.5.1",
         "react": "^16.5.2",
         "react-dom": "^16.5.2",
+        "react-i18next": "^7.12.0",
         "react-redux": "^5.0.7",
         "react-router-dom": "^4.3.1",
         "react-scripts-ts": "2.17.0",
