--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "@types/react-redux": "^6.0.9",
         "@types/react-router-dom": "^4.3.1",
         "@types/styled-components": "^3.0.1",
+        "@types/uuid": "^3.4.4",
         "i18next": "^11.9.0",
         "i18next-xhr-backend": "^1.5.1",
         "react": "^16.5.2",
@@ -19,7 +20,8 @@
         "react-scripts-ts": "2.17.0",
         "redux": "^4.0.0",
         "styled-components": "^3.4.9",
-        "typesafe-actions": "^2.0.4"
+        "typesafe-actions": "^2.0.4",
+        "uuid": "^3.3.2"
     },
     "scripts": {
         "start": "react-scripts-ts start",
