--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
         "@types/react-i18next": "^7.8.2",
         "@types/react-redux": "^6.0.9",
         "@types/react-router-dom": "^4.3.1",
+        "@types/redux-logger": "^3.0.6",
+        "@types/redux-saga": "^0.10.5",
         "@types/styled-components": "^3.0.1",
         "@types/uuid": "^3.4.4",
         "i18next": "^11.9.0",
@@ -19,6 +21,8 @@
         "react-router-dom": "^4.3.1",
         "react-scripts-ts": "2.17.0",
         "redux": "^4.0.0",
+        "redux-logger": "^3.0.6",
+        "redux-saga": "^0.16.0",
         "styled-components": "^3.4.9",
         "typesafe-actions": "^2.0.4",
         "uuid": "^3.3.2"
