--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "@types/i18next": "^11.9.0",
         "@types/i18next-xhr-backend": "^1.4.1",
+        "@types/lodash": "^4.14.116",
         "@types/react-i18next": "^7.8.2",
         "@types/react-redux": "^6.0.9",
         "@types/react-router-dom": "^4.3.1",
@@ -22,14 +23,16 @@
         "react-scripts-ts": "2.17.0",
         "redux": "^4.0.0",
         "redux-logger": "^3.0.6",
+        "redux-observable": "^1.0.0",
         "redux-saga": "^0.16.0",
+        "rxjs": "^6.3.2",
         "styled-components": "^3.4.9",
         "typesafe-actions": "^2.0.4",
         "uuid": "^3.3.2"
     },
     "scripts": {
         "start": "react-scripts-ts start",
-        "build": "react-scripts-ts build",
+        "build": "GENERATE_SOURCEMAP=false react-scripts-ts build",
         "test": "react-scripts-ts test --env=jsdom",
         "eject": "react-scripts-ts eject"
     },
